# cookiecutter-py-modern

./: .gitignore  LICENSE  README.md  cookiecutter.json  variants.json
.github/: dependabot.yml
.github/actions/generate-variant/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  dependency-sync.yml  generate-requirements.yml  sync-reference-lockfile.yml  test-reference.yml
docs/: development.md
hooks/: post_gen_project.py
reference/: README.md  requirements.txt
scripts/: generate.bash  install.bash  lint.bash  test-all-variants.bash  test-template.bash  test.bash
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  docker-compose.yaml  pyproject.toml  test  {% if cookiecutter.docker -%} .dockerignore {%- endif %}  {% if cookiecutter.include_uv_lock %}uv.lock{% endif %}  {% if cookiecutter.include_uv_lock -%} uv.lock {%- endif %}
{{cookiecutter.project_name}}/docker/api/: Dockerfile
{{cookiecutter.project_name}}/docker/postgresql/: Dockerfile  entrypoint.bash
{{cookiecutter.project_name}}/docker/postgresql/scripts/: init-db.bash
{{cookiecutter.project_name}}/docker/web/: Dockerfile
{{cookiecutter.project_name}}/docker/{% if cookiecutter.api_lambda %}lambda-api{% else %}_lambda_api_disabled{% endif %}/: Dockerfile
{{cookiecutter.project_name}}/docs/: core-dependencies-overview.md  dev-dependencies-overview.md  index.md  {% if cookiecutter.api -%} api-dependencies-overview.md {%- endif %}  {% if cookiecutter.cli -%} cli-dependencies-overview.md {%- endif %}  {% if cookiecutter.web -%} web-dependencies-overview.md {%- endif %}
{{cookiecutter.project_name}}/envs/: base.env  test.env  {% if cookiecutter.api_lambda %}docker-compose.env{% else %}_docker_compose_disabled{% endif %}
{{cookiecutter.project_name}}/envs/local/: secret.env
{{cookiecutter.project_name}}/src/{% if cookiecutter.api %}{{cookiecutter.package_name}}_api{% else %}_api_disabled{% endif %}/: config.py  exceptions.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api %}{{cookiecutter.package_name}}_api{% else %}_api_disabled{% endif %}/middleware/: __init__.py  logging.py  request_id.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api %}{{cookiecutter.package_name}}_api{% else %}_api_disabled{% endif %}/routers/: {% if cookiecutter.api_auth %}auth.py{% else %}{% endif %}
{{cookiecutter.project_name}}/src/{% if cookiecutter.api %}{{cookiecutter.package_name}}_api{% else %}_api_disabled{% endif %}/schemas/: health.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api -%} {{cookiecutter.package_name}}_api {%- endif %}/: __init__.py  dependencies.py  main.py  {% if cookiecutter.api_lambda -%} lambda_handler.py {%- endif %}  {% if cookiecutter.api_pagination -%} pagination.py {%- endif %}
{{cookiecutter.project_name}}/src/{% if cookiecutter.api -%} {{cookiecutter.package_name}}_api {%- endif %}/routers/: health.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api -%} {{cookiecutter.package_name}}_api {%- endif %}/routers/{% if cookiecutter.api_versioning -%} v1 {%- endif %}/: __init__.py  example.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api -%} {{cookiecutter.package_name}}_api {%- endif %}/schemas/: base.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.api -%} {{cookiecutter.package_name}}_api {%- endif %}/{% if cookiecutter.api_auth -%} auth {%- endif %}/: __init__.py  dependencies.py  schemas.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.cli %}{{cookiecutter.package_name}}_cli{% else %}_cli_disabled{% endif %}/: __init__.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.cli -%} {{cookiecutter.package_name}}_cli {%- endif %}/: __main__.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.web %}{{cookiecutter.package_name}}_web{% else %}_web_disabled{% endif %}/: __init__.py  asgi.py  settings.py  wsgi.py
{{cookiecutter.project_name}}/src/{% if cookiecutter.web -%} {{cookiecutter.package_name}}_web {%- endif %}/: urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: logging.py  {% if cookiecutter.sentry -%} sentry.py {%- endif %}
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.package_name}}/: test_logging.py  test_sentry.py
{{cookiecutter.project_name}}/tests/unit/{% if cookiecutter.api %}test_{{cookiecutter.package_name}}_api{% else %}_test_api_disabled{% endif %}/: test_config.py  test_health.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.api %}test_{{cookiecutter.package_name}}_api{% else %}_test_api_disabled{% endif %}/: test_health.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.api -%} test_{{cookiecutter.package_name}}_api {%- endif %}/: __init__.py  conftest.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.api_lambda %}common{% else %}_common_disabled{% endif %}/: __init__.py  http.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.api_lambda %}integration{% else %}_integration_disabled{% endif %}/: __init__.py  conftest.py  test_lambda_integration.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.api_lambda %}smoke{% else %}_smoke_disabled{% endif %}/: __init__.py  conftest.py  test_smoke.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.cli -%} test_{{cookiecutter.package_name}}_cli {%- endif %}/: test_cli.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.web -%} test_{{cookiecutter.package_name}}_web {%- endif %}/: test_django.py
{{cookiecutter.project_name}}/{% if cookiecutter.github_actions %}.github{% else %}_.github_disabled{% endif %}/actions/setup-python-uv/: action.yaml
{{cookiecutter.project_name}}/{% if cookiecutter.github_actions %}.github{% else %}_.github_disabled{% endif %}/workflows/: cicd.yaml
