[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.friendly_name}}"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "{{cookiecutter.license}}"}
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
classifiers = [
    "{{cookiecutter.classifiers_intended_audience}}",
    "{{cookiecutter.classifiers_development_status}}",
    "{{cookiecutter.classifiers_environment}}",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "{{cookiecutter.classifiers_typing}}",
    "License :: OSI Approved :: {{cookiecutter.license}} License",
]
dependencies = [
    {%- if cookiecutter.async %}
    "uvloop",
    {%- endif %}

    {%- if cookiecutter.cli %}
    "typer",
    {%- endif %}

    {%- if cookiecutter.web %}
    "django",
    "argon2-cffi",
    "django-split-settings",
    "django-axes",
    "django-cors-headers",
    "django-csp",
    "django-health-check",
    "django-extensions",
    "psycopg",
    {%- if cookiecutter.async %}
    "uvicorn[standard]",
    {%- else %}
    "gunicorn",
    {%- endif %}
    {%- endif %}

    {%- if cookiecutter.api %}
    "fastapi",
    "pydantic-settings",
    "python-multipart",
    {%- if not cookiecutter.web or not cookiecutter.async %}
    "uvicorn[standard]",
    {%- endif %}
    {%- if cookiecutter.api_auth %}
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    {%- endif %}
    {%- if cookiecutter.api_lambda %}
    "mangum>=0.19",
    "aws-lambda-powertools>=3.0",
    {%- if cookiecutter.api_lambda_powertools_tracing %}
    "aws-lambda-powertools[tracer]",
    {%- endif %}
    {%- endif %}
    {%- if cookiecutter.api_pagination %}
    "fastapi-pagination>=0.12",
    {%- endif %}
    {%- endif %}

    "django-environ",

    "httpx",
    "orjson",
    "pydantic",
    "rich",
    "structlog",
    {%- if cookiecutter.sentry %}
    "sentry-sdk",
    {%- endif %}
]
[project.urls]
"Homepage" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
"Bug Tracker" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/issues"

[dependency-groups]
dev = [
    {%- if cookiecutter.web %}
    "factory-boy",
    "django-debug-toolbar",
    "django-migration-linter",
    "django-extra-checks",
    "django-coverage-plugin",
    "django-test-migrations",
    "django-stubs[compatible-mypy]",
    "django-stubs-ext",
    "pytest-django",
    {%- endif %}

    "ipython",
    "mypy",
    "ruff",
    "safety",
    "vulture",

    "coverage",
    "hypothesis",
    "pytest",
    "pytest-mock",
    {%- if cookiecutter.async %}
    "pytest-asyncio",
    {%- endif %}
    "pytest-env",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-randomly",
    "faker",
    "respx",
    "time-machine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/{{cookiecutter.package_name}}",
    {%- if cookiecutter.cli %}
    "src/{{cookiecutter.package_name}}_cli",
    {%- endif %}
    {%- if cookiecutter.web %}
    "src/{{cookiecutter.package_name}}_web",
    {%- endif %}
    {%- if cookiecutter.api %}
    "src/{{cookiecutter.package_name}}_api",
    {%- endif %}
]

{%- if cookiecutter.cli %}
[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}_cli.__main__:app"
{%- endif %}

[tool.ruff]
fix = true
line-length = {{cookiecutter.format_line_length}}
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",      # pydocstyle (docstring enforcement)
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["D", "S101", "S104", "S105"]

[tool.ruff.lint.isort]
known-first-party = [
    "{{cookiecutter.package_name}}",
    "{{cookiecutter.package_name}}_cli",
    "{{cookiecutter.package_name}}_web",
    "{{cookiecutter.package_name}}_api",
]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
{%- if cookiecutter.web %}
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "{{cookiecutter.package_name}}_web.settings"
{%- endif %}

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

{%- if cookiecutter.api_auth %}
[[tool.mypy.overrides]]
module = "jose"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true
{%- endif %}

{%- if cookiecutter.api_lambda %}
[[tool.mypy.overrides]]
module = "mangum"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aws_lambda_powertools.*"
ignore_missing_imports = true
{%- endif %}

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
ignore_errors = true
exclude_lines = [
   "def __repr__",  # Don't complain about missing debug-only code
   "if self.debug:",  # Don't complain about missing debug-only code
   "raise AssertionError",  # Don't complain if tests don't hit defensive assertion code
   "raise NotImplementedError",  # Don't complain if tests don't hit defensive assertion code
   "if 0:",  # Don't complain if non-runnable code isn't run
   "if __name__ == .__main__.:",  # Don't complain if non-runnable code isn't run
]

[tool.pytest.ini_options]
pythonpath = "src tests"
testpaths = ["tests"]
norecursedirs = [
    ".*",
    "*.egg",
    "__pycache__",
    "dist",
    "build",
    "docs",
]
addopts = """
-v
--cov=src
--cov-branch
--cov-report=term-missing:skip-covered
--cov-report=html
--cov-report=xml
--cov-fail-under={{cookiecutter.coverage_fail_under}}
"""
log_cli = false
log_cli_level = "INFO"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
{%- if cookiecutter.async %}
asyncio_mode = "auto"
{%- endif %}
env = [
    "ENVIRONMENT=test",
    {%- if cookiecutter.sentry %}
    "SENTRY_DSN=",
    {%- endif %}
    {%- if cookiecutter.web %}
    "DJANGO_SETTINGS_MODULE={{cookiecutter.package_name}}_web.settings",
    "SECRET_KEY=test-secret-key-not-for-production",
    "DEBUG=True",
    "DATABASE_URL=sqlite:///test.sqlite3",
    {%- endif %}
    {%- if cookiecutter.api %}
    "DEBUG=True",
    {%- if cookiecutter.api_auth %}
    "JWT_SECRET_KEY=test-jwt-secret-not-for-production",
    {%- endif %}
    {%- if cookiecutter.api_lambda %}
    "POWERTOOLS_SERVICE_NAME=test-service",
    "POWERTOOLS_LOG_LEVEL=DEBUG",
    "POWERTOOLS_DEV=true",
    {%- if cookiecutter.api_lambda_powertools_metrics %}
    "POWERTOOLS_METRICS_NAMESPACE=test-namespace",
    {%- endif %}
    {%- endif %}
    {%- endif %}
]
